Add a few overrides.

--- a/engine/config/platform/pc/~neon-overrides~.ini
+++ b/engine/config/platform/pc/~neon-overrides~.ini
@@ -18,3 +18,7 @@ DistantVolFog = true
 ; CharacterRimEnhancement = false ; Experimental toggle.
 ScreenSpaceHeatHaze = true
 ScreenSpaceDust = true
+ConstrastAdaptiveSharpening = false
+
+[Rendering]
+BloomLuminanceClampFactor = 1.0 ; Limit bloom intensity to moderate amount to make sure it's not excessive.
