--- a/engine/config/platform/pc/~neon-overrides~.ini
+++ b/engine/config/platform/pc/~neon-overrides~.ini
@@ -20,5 +20,16 @@ ScreenSpaceHeatHaze = true
 ScreenSpaceDust = true
 ConstrastAdaptiveSharpening = false
 
+;: Bloom luminance limit to maintain coherent picture and bloom appearance.
 [Rendering]
-BloomLuminanceClampFactor = 1.0 ; Limit bloom intensity to moderate amount to make sure it's not excessive.
+BloomLuminanceClampFactor = 1.0
+
+;: Force DLSS auto-exposure to avoid ghosting. User should also add to DLSSTweaks.
+[DLSS]
+EnableAutoExposure = true
+
+;: Force more grey and less intense specular tint. Ultra+ is a bit too blue.
+[Editor/Characters/Skin]
+SubsurfaceSpecularTint_R = 0.17 
+SubsurfaceSpecularTint_G = 0.17
+SubsurfaceSpecularTint_B = 0.21
